# super-z-skills

./: .gitignore  .super-z.toml  1-80-Макрогеометрия Этерии- Проективное Многообразие и Физика Транзита.md.md  1-Путь силы- Из тени бесполезности в герои клана Линь.md  CHANGELOG.md  LICENSE  LLM_INTEGRATION_SPEC.md  README.md  bootstrap.sh  poler_enhanced.py  pyproject.toml  requirements.txt  setup.py  smoke_test_stage5.py  super-z-skills-changes.patch  super_z_bridge.py  super_z_config.py  super_z_core.py
.github/workflows/: tests.yml
install/: linux.sh  windows.bat  windows.ps1
scripts/: ask_llm.py  create_missing_wrappers.py  create_wrappers_v2.py  create_wrappers_v3.py  debug_classifier.py  fix_manifests_for_wrappers.py  package_super_z.py  register_remaining_skills.py  self_context.sh  test_final.py  test_pattern3_routing.py  update_run_py.py  update_run_py_v2.py
skills/: ARCHITECTURE.md
skills/ASR/: manifest.json
skills/LLM/: manifest.json
skills/TTS/: manifest.json
skills/VLM/: manifest.json
skills/_orchestrator/: SKILL.md  manifest.json
skills/_shared/: llm_wrapper.py  manifest.json  skill_schema.py
skills/agent-browser/: manifest.json
skills/ai-news-collectors/: manifest.json
skills/aminer-academic-search/: manifest.json
skills/aminer-daily-paper/: manifest.json
skills/aminer-free-academic/: manifest.json
skills/anti-pua/: manifest.json
skills/auto-target-tracker/: manifest.json
skills/blog-writer/: manifest.json
skills/charts/: manifest.json
src/super_z/: cli.py  (+6 more)
tests/: test_cli.py  test_local_backend.py  test_sandbox_v2.py
(+215 files in other folders)
